<resources>
    <string name="app_name">MyIntentAppDicoding</string>
    <string name="change_activity">Pindah Activity</string>
    <string name="pindah_activity_dengan_data">Pindah Activity dengan data</string>
    <string name="pindah_activity_dengan_object">Pindah Activity dengan object</string>
    <string name="dial_a_number">Dial a number</string>
    <string name="pindah_activity_untuk_result">Pindah Activity untuk result</string>
    <string name="text_activity_result">Hasil dari Activity</string>
    <string name="move_activity_result">Ini MoveActivity</string>
    <string name="data_received">Data Received</string>

    <string name="name_age_settings">Name : %s, Your Age : %d</string>

</resources>
