<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_move_activity"
        android:text="@string/change_activity"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_move_activity_with_data"
        android:text="@string/pindah_activity_dengan_data"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_move_activity_with_object"
        android:text="@string/pindah_activity_dengan_object"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_move_dial_number"
        android:text="@string/dial_a_number"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_move_for_result"
        android:text="@string/pindah_activity_untuk_result"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_activity_result"
        android:textStyle="bold"
        android:gravity="center"
        />

</LinearLayout>